# ##############################################################################
#  This file is part of df_config                                              #
#                                                                              #
#  Copyright (C) 2020 Matthieu Gallet <df_config@19pouces.net>                    #
#  All Rights Reserved                                                         #
#                                                                              #
#  You may use, distribute and modify this code under the                      #
#  terms of the (BSD-like) CeCILL-B license.                                   #
#                                                                              #
#  You should have received a copy of the CeCILL-B license with                #
#  this file. If not, please visit:                                            #
#  https://cecill.info/licences/Licence_CeCILL-B_V1-en.txt (English)           #
#  or https://cecill.info/licences/Licence_CeCILL-B_V1-fr.txt (French)         #
#                                                                              #
# ##############################################################################
[metadata]
author = Matthieu Gallet
author_email = df_config@19pouces.net
classifiers =
        Development Status :: 5 - Production/Stable
        Operating System :: MacOS :: MacOS X
        Operating System :: Microsoft :: Windows
        Operating System :: POSIX :: BSD
        Operating System :: POSIX :: Linux
        Operating System :: Unix
        License :: OSI Approved :: CEA CNRS Inria Logiciel Libre License, version 2.1 (CeCILL-2.1)
        Programming Language :: Python :: 3 :: Only
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Framework :: Django :: 2.2
        Framework :: Django :: 3.0
        Framework :: Django :: 3.1
description = Smart default settings for Django websites
license = CeCILL-B
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Matthieu Gallet
maintainer_email = df_config@19pouces.net
name = df_config
url = https://github.com/d9pouces/df_config
version = attr: df_config.__version__


[options]
include_package_data = True
install_requires =
        Django >= 2.1

packages = find:
tests_require =
        tox
        hypothesis
zip_safe = False


[options.packages.find]
exclude =
        *.DS_Store
        *.sass-cache*
include = df_config*


[bdist_wheel]
universal = 0


[isort]
force_grid_wrap=0
include_trailing_comma=True
line_length=88
multi_line_output=3
profile = black
use_parentheses=True


[mypy]
files=df_config
ignore_missing_imports=true
python_version = 3.9


[flake8]
ignore = E203, E501, C901, F401, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4,B9


[pydocstyle]
inherit = false
ignore = D100, D101, D102, D103, D104, D105, D106, D107, D203, D205, D212, D213, D400, D403, D415
match = .*\.py
match_dir=df_config
# waiting for a fix of #363


[pycodestyle]
max-line-length = 88


[coverage:report]
fail_under = 50


[tox:tox]
envlist = {py36,py37,py38,py39,py310}-{django21,django22,django30,django31,django32,django40}


[testenv:{py36,py37,py38,py39,py310}-{django21,django22,django30,django31,django32,django40}]
commands = python setup.py test
deps = hypothesis
    nose
    tox
    django21: Django>=2.1,<2.2
    django22: Django>=2.2,<2.3
    django30: Django>=3.0,<3.1
    django31: Django>=3.1,<3.2
    django32: Django>=3.2,<3.3
    django40: Django>=4.0,<4.1
